Release Notes for the evrClient and event package
--------------------------------------------------

R1.4.3:  2018-06-28 Kukhee Kim (KHKIM)
        * build against BsaCore R1.4.1
        * apply Till's change on devBsaCore.c

              devBsaCore: defer activation of BSA sink until
              iocInit is in the initHookAfterIocRunning state.

              The sink does process the BSA record which is
              not 'legal' until the IOC is fully initialized.
              This fix mitigates a scenario where triggers
              are enabled prematurely (it is recommended to
              enable triggers only after IOC initialization).

              make automatic registration of timing callback optional
              ...depending on an environment variable.



R1.4.2:  2018-05-16 Kukhee Kim (KHKIM)
        * build against BsaCore R1.4.0
R1.4.1:  2018-05-09 Kukhee Kim (KHKIM)
        * merge from bsa_core branch
        * support BsaCore
        * Catch up event module changes after evrClient was separated out from the event module
        * update README_BSA file, how to use evrClient with BsaCore
        * align with the followings:

          evrmaDriver   R1.0.8  (kernel driver)
          evrma         R1.0.8  (api)

          miscUtil      R2.2.5
          timingApi     R0.6
          BsaCore       R1.3.3


bsa_core: 2018-05-08 Kukhee Kim (KHKIM)
        * branch out from R1.3.1 to support Till's new BsaCore
        * integrated with BsaCore
        * bump up miscUtil R2.2.5
        * build against timingApi R0.6
        * build against BsaCore   R1.3.3
        * tag under bsa_core branch (R1.4.0-bsa_core)
        * prepare to move to master branch

R1.3.1: 2017-09-25 Kukhee Kim (KHKIM)
        * build against evrmaDriver version R1.0.8
        * build against evrma version R1.0.8

R1.3.0 2017-06-07 Hugo Slepicka (SLEPICKA)
        * Fixed typo "promtgroup" -> "promptgroup" at evrSupport/src/longSubRecord.dbd

R1.2.0 2017-03-29 Kukhee Kim (KHKIM)